tests/snapshots/cli__add_follow_nonexistent@root_nonexistent_nixpkgs.snap
---
source: tests/cli.rs
assertion_line: 490
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/root.flake.nix"
    - "--diff"
    - add-follow
    - nonexistent.nixpkgs
    - nixpkgs
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: input 'nonexistent' not found in the flake

hint: to add it, run `flake-edit add nonexistent <flakeref>`; see declared inputs with `flake-edit list`
