tests/snapshots/cli__add_follow_rejects_slash_form_unrecognized.snap
---
source: tests/cli.rs
assertion_line: 562
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/root.flake.nix"
    - "--diff"
    - add-follow
    - neovim/nixvim/flake-parts
    - flake-parts
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: input 'neovim/nixvim/flake-parts' not found in the flake

hint: to add it, run `flake-edit add neovim/nixvim/flake-parts <flakeref>`; see declared inputs with `flake-edit list`
