tests/snapshots/cli__add_follow_rejects_three_segment_dot_path.snap
---
source: tests/cli.rs
assertion_line: 526
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/root.flake.nix"
    - "--diff"
    - add-follow
    - neovim.nixvim.flake-parts
    - flake-parts
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: `add-follow` accepts only depth-1 paths of the form `parent.child`; got 'neovim.nixvim.flake-parts' (3 segments)

hint: use `flake-edit follow` for deeper paths (depth bounded by `follow.max_depth` in your config)
