tests/snapshots/cli__add_follow_retarget@existing_follows_nested_retarget_rust-overlay_nixpkgs.snap
---
source: tests/cli.rs
assertion_line: 431
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/existing_follows_nested_retarget.flake.nix"
    - "--diff"
    - add-follow
    - rust-overlay.nixpkgs
    - nixpkgs
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -6,7 +6,7 @@
     nixpkgs-stable.url = "github:NixOS/nixpkgs/nixos-24.11";
     rust-overlay = {
       url = "github:oxalica/rust-overlay";
-      inputs.nixpkgs.follows = "nixpkgs-stable";
+      inputs.nixpkgs.follows = "nixpkgs";
     };
   };


----- stderr -----
