tests/snapshots/cli__add_no_flake@all_blanks_not_a_flake.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/all_blanks.flake.nix"
    - "--diff"
    - add
    - "--no-flake"
    - not_a_flake
    - "github:a-kenji/not_a_flake"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -10,6 +10,9 @@
     };

     crane.url = "github:ipetkov/crane";
+
+    not_a_flake.url = "github:a-kenji/not_a_flake";
+    not_a_flake.flake = false;
   };

   outputs = _: { };

----- stderr -----
