tests/snapshots/cli__add_no_flake@root_not_a_flake.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/root.flake.nix"
    - "--diff"
    - add
    - "--no-flake"
    - not_a_flake
    - "github:a-kenji/not_a_flake"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -17,6 +17,8 @@
       inputs.rust-overlay.follows = "rust-overlay";
       inputs.flake-utils.follows = "flake-utils";
     };
+    not_a_flake.url = "github:a-kenji/not_a_flake";
+    not_a_flake.flake = false;
   };

   outputs = _: { };

----- stderr -----
