tests/snapshots/cli__add_shallow@root_shallow_input.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/root.flake.nix"
    - "--diff"
    - add
    - "--shallow"
    - shallow_input
    - "github:foo/bar"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -17,6 +17,7 @@
       inputs.rust-overlay.follows = "rust-overlay";
       inputs.flake-utils.follows = "flake-utils";
     };
+    shallow_input.url = "github:foo/bar?shallow=1";
   };

   outputs = _: { };

----- stderr -----
