tests/snapshots/cli__add_shallow_with_ref@root_shallow_ref_input.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/root.flake.nix"
    - "--diff"
    - add
    - "--shallow"
    - "--ref-or-rev"
    - main
    - shallow_ref_input
    - "github:foo/bar"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -17,6 +17,7 @@
       inputs.rust-overlay.follows = "rust-overlay";
       inputs.flake-utils.follows = "flake-utils";
     };
+    shallow_ref_input.url = "github:foo/bar/main?shallow=1";
   };

   outputs = _: { };

----- stderr -----
