tests/snapshots/cli__change@completely_flat_toplevel_alt_nixpkgs.snap
---
source: tests/cli.rs
assertion_line: 150
info:
  program: flake-edit
  args:
    - "--flake"
    - /home/kenji/dev/flake-edit/tests/fixtures/completely_flat_toplevel_alt.flake.nix
    - "--diff"
    - change
    - nixpkgs
    - "github:nixos/nixpkgs/nixos-24.05"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -2,7 +2,7 @@
   description = "Edit your flake inputs with ease";

   inputs = {
-    nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";
+    nixpkgs.url = "github:nixos/nixpkgs/nixos-24.05";
     flake-utelinos.url = "github:numtide/flake-utils";
     rust-overlay.inputs.nixpkgs.follows = "nixpkgs";
     rust-overlay.url = "github:oxalica/rust-overlay";

----- stderr -----
